# StudyCPP

./: .dir-locals.el  CMakeLists.txt  README.md
config/: googletest_debug.cmake  windows_debug.cmake
config/linux/: debug.cmake
docs/: libraries.md
include/: base16.h  clazz.h  factory_method.h  file_test.h  log.h  my_smart_ptr.h  poco_test.h  spdlog_test.h  stl_test.h  tcache.h  template_test.h  thread_pool.h
include/ilog/: log_factory.h  log_format.h  log_output.h  logger.h
include/utils/: datetime.h
issues/: cmake.md
src/: base16.cpp  clazz.cpp  file_test.cpp  log.cpp  main.cc  main.cpp  poco_test.cpp  spdlog_test.cpp  stl_test.cpp  tcache.cpp  template_test.cpp
src/ilog/: console_log_output.cpp  file_log_output.cpp  log_factory.cpp  logger.cpp  xlog_format.cpp  xmllog_format.cpp
src/utils/: datetime.cpp
tests/: test.cpp
